--- a/web/css/talk.css
+++ b/web/css/talk.css
@@ -1,6 +1,13 @@
-body{
+html, body {
     width: 100%;
     height: 100%;
+    margin: 0;
+    padding: 0;
+}
+.content {
+    width: 300px;
+    height: 300px;
+    margin: 0 auto; /*水平居中*/
 }
 .scTop{
     width: 100%;
@@ -27,8 +34,8 @@ body{
 #send{
     position:fixed;
     z-index:999;
-    left:0;
-    bottom: 0;
+    left:0em;
+    bottom: 0%;
     width:100%;
     line-height:1.2em;
     height:4.5em;
@@ -40,8 +47,9 @@ body{
 }
 
 #send input{
+    position: relative; /*脱离文档流*/
     margin-left: 14%;
-    padding: 0.5% 0 0.5% 0;
+    margin-top: -0.1em;
     height:3em;
     font-size: 2.5em;
     font-family: "Microsoft YaHei";
@@ -75,7 +83,8 @@ body{
 .btn-box {
     width: 12%;
     float: left;
-    padding: 1% 2% 1% 1%;
+    height: 100%;
+    padding: 0 2% 0 1%;
 }
 
 .submit{
@@ -97,7 +106,7 @@ body{
 }
 .content{
     width: 100%;
-    padding: 1em 0 0 0;}
+    padding: 1em 0em 0 0;}
 
 .receive-content{
     width:100%;
@@ -128,7 +137,7 @@ body{
     float: left;
     padding: 4% 5%;
     background: #DEDEDE;
-    border-radius: 0 1.5em 1.5em;
+    border-radius: 0em 1.5em 1.5em;
 }
 
 .talk p{
