--- a/web/css/index2.css
+++ b/web/css/index2.css
@@ -15,12 +15,44 @@ body{
     position: relative;
     left:2ex;
 }
-.title
-{
-    font-family: "Microsoft YaHei";
-    font-size: 0.7em;
-    font-weight: 100;
+
+#NotMoveDIV {
+    position: fixed;
+    z-index: 999;
+    left: 0em;
+    bottom: 0;
+    width: 100%;
+    line-height: 1.2em;
+    height: 4.5em;
+    background: #fff;
+    border-width: 0.1em 0 0 0;
+    border-style: solid;
+    border-color: rgba(144, 144, 144, 0.25);
+    font-size: 0.4em;
 }
+
+.icon-box {
+    float: left;
+    height: 4em;
+    width: 25%;
+    margin: 0 auto;
+    text-align: center;
+    padding-top: 0.6em;
+    background: #fff;
+}
+
+.botm-icon {
+    height: 2em !important;
+    width: 2em !important;
+}
+
+.botm-icon-text {
+    font-family: "Microsoft YaHei";
+    letter-spacing: 0.1em;
+    color: #4f4a46;
+}
+
+
 .pane
 {
     width: 100%;
@@ -73,38 +105,7 @@ body{
 .clear {
     clear: both;
 }
-.bottom{
-    position:fixed;
-    bottom:0;
-    width: 100%;
-    padding:2% 0 1%;
-    background: #ffffff;
-    text-align: left;
-    color: 		#ececed;
-    border-style: solid none solid none;
-    border-width: 0.3ex;
-    border-color: #D8D8D8;
-}
-.bottom{
-    width: 100%;
-    background: #ffffff;
-    text-align: left;
-    color: 		#ececed;
-}
-.bottompane
-{
-    float:left;
-    width:25%;
-    color:	#484848;
-    text-align: center;
-}
 
-.pic_icon {
-    height: 1.8em;
-    width: auto;
-    line-height: 2.5em;
-    color: #ffffff;
-}
 .pane3
 {
     padding: 1%;
