--- a/web/css/search.css
+++ b/web/css/search.css
@@ -65,6 +65,7 @@ body {
     text-align: center;
     top: 0;
     width: 2.5em;
+    font-family: FontAwesome;
 }
 
 .search input {
@@ -84,6 +85,13 @@ body {
 
 .search input:focus {
     border: 1px solid rgba(160, 160, 160, 0.3);
+}
+
+.content{
+    position: absolute;
+    top: 20%;
+    margin-bottom: 13%;
+    z-index: -11111;
 }
 
 .select {
