--- a/web/css/stuauthen.css
+++ b/web/css/stuauthen.css
@@ -30,14 +30,13 @@ body{
 
 .content{
     overflow: auto;
-    margin-top: 1em;
 }
 
-.content form{
+ .form{
     width: 100%;
     height: 35.21%;
     background-color: #fafafa;
-
+     margin-top: 1em;
 }
 
  .message{
@@ -45,6 +44,13 @@ body{
      position: relative;
      width:100%;
      height: 3em;
+ }
+ .lastborder{
+     width: 92%;
+     margin: 0% 4%;
+     overflow: auto;
+     height: 100%;
+
  }
 .border{
     border-bottom: 1px solid rgba(160, 160, 160, 0.3);
@@ -73,10 +79,11 @@ body{
     width:30%;
 }
 
-.message .ctnt{    float: left;
+.message .ctnt{
+    float: left;
     width: 70%;
     height: 90%;
-    margin-top: 0.5%;
+    margin-top: 0.9%;
 }
 
 select{
@@ -102,3 +109,8 @@ select{
     border-radius: 3px;
     text-align: center;
 }
+
+/* add teacher css*/
+
+
+
