--- a/web/css/talk.css
+++ b/web/css/talk.css
@@ -114,18 +114,22 @@ html, body {
 
 }
 
+
 .send-content{
+    width: 100%;
     float: left;
     padding: 1em 1em 0 0;
+    margin-bottom: 1em;
 }
 .send{
-    width: 70%;
+    margin-right: 1em;
     float: right;
     padding: 4% 5%;
     background: #64a9e9;
-    color:#fff;
+    color: #fff;
     line-height: 1.3em;
     border-radius: 1.5em;
+    max-width: 70%;
 }
 .portrait{
     width:13%;
@@ -133,11 +137,11 @@ html, body {
     margin-top: -0.5em;
 }
 .talk{
-    width: 66%;
+    max-width: 66%;
     float: left;
     padding: 4% 5%;
     background: #DEDEDE;
-    border-radius: 0em 1.5em 1.5em;
+    border-radius: 0em 1em 1em;
 }
 
 .talk p{
