--- a/web/css/studenttask.css
+++ b/web/css/studenttask.css
@@ -1,3 +1,6 @@
+body{
+    background-color: #E0E0E0 !important;
+}
 .scTop{
     width: 100%;
     padding:8% 0 6% 0%;
@@ -28,21 +31,24 @@
 }
 .content{
     overflow: auto;
-    height:45em;
+    height:auto;
     background-color: #E0E0E0;
 }
-.form{
+.sec{
     width: 100%;
-    height: 35.21%;
     background-color: #fafafa;
     margin-top: 1em;
+    padding: 1em 0;
 }
 
 .message{
+    display:flex;
     background: none;
     position: relative;
-    width:95%;
+    width: 90%;
     height: 3em;
+    margin-left: 5%;
+    border-bottom: 1px solid rgba(160, 160, 160, 0.3);
 }
 .message2{
     background: none;
@@ -50,23 +56,18 @@
     width:95%;
     height: 6em;
 }
-.border{
-    border-bottom: 1px solid rgba(160, 160, 160, 0.3);
-    width: 92%;
-    margin: 0% 4%;
-    overflow: auto;
-    height: 100%;
-}
+
 .name{
-    padding-top: 1em;
-    float:left;
-    width:30%;
+    width: 30%;
+    display: flex;
+    align-items: center;
 }
 
 .message .ctnt{
-    float: left;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 70%;
-    height: 90%;
     margin-top: 0.9%;
 }
 .message2 .ctnt{
@@ -96,19 +97,7 @@ select{
     outline: 0;
     width: 98%;
     text-decoration: none;
-}
-.message2 textarea{
-    border: none;
-    color: #646464;
-    background-color: #fafafa;
-    height: 99%;
-    font-size: 1em;
-    font-family: "Microsoft YaHei";
-    text-indent: 0.2em;
-    display: block;
-    outline: 0;
-    width: 98%;
-    text-decoration: none;
+    margin: 0 !important;
 }
 .bottom{
     bottom: 0;
@@ -120,4 +109,10 @@ select{
     color:#ffffff;
     font-size:130%;
     position: relative;
+}
+
+.des{
+    display: flex;
+    align-items: center;
+    margin-left: 3%;
 }
