--- a/web/css/mine.css
+++ b/web/css/mine.css
@@ -23,7 +23,6 @@ body{
 }
 .pane1{
     width:100%;
-    height:8em;
     text-align: center;
     position: relative;
     background:#F0F0F0;
@@ -58,8 +57,9 @@ body{
 }
 .pane1-2{
     margin: 0% 0% 0% 0%;
-    height:0em;
     width:100%;
+    clear:both;
+    overflow: hidden;
 }
 .pane1-2-1{
     float:left;
