--- a/web/css/order.css
+++ b/web/css/order.css
@@ -109,41 +109,6 @@ select{
     border-radius: 3px;
     text-align: center;
 }
-#NotMoveDIV {
-    position: fixed;
-    z-index: 999;
-    left: 0em;
-    bottom: 0;
-    width: 100%;
-    line-height: 1.2em;
-    height: 4.5em;
-    background: #fff;
-    border-width: 0.1em 0 0 0;
-    border-style: solid;
-    border-color: rgba(144, 144, 144, 0.25);
-    font-size: 0.4em;
-}
-
-.icon-box {
-    float: left;
-    height: 4em;
-    width: 25%;
-    margin: 0 auto;
-    text-align: center;
-    padding-top: 0.6em;
-    background: #fff;
-}
-
-.botm-icon {
-    height: 2em !important;
-    width: 2em !important;
-}
-
-.botm-icon-text {
-    font-family: "Microsoft YaHei";
-    letter-spacing: 0.1em;
-    color: #4f4a46;
-}
 
 .shortcut1{
     position: fixed;
@@ -155,5 +120,39 @@ select{
     z-index: -1111111;
     position: relative;
 }
+
+.teachers{
+
+    height: auto;
+}
+.teachers .title{
+    margin: 4% 4%;
+}
+.teachers .border{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border: none;
+    padding: .25em 0;
+}
+.teachers .border+.border{
+    border-top: 1px solid rgba(160, 160, 160, 0.3);
+}
+.teacher .wrap{
+    display: flex;
+    align-items: center;
+}
+.teacher .wrap .avaster{
+    background: #000;
+    border-radius: 50%;
+    width: 3.5em;
+    height: 3.5em;
+    margin-right:1em;
+}
+.teacher .wrap .intro span+span{
+    margin-left: .5em;
+}
+
+
 
 
