--- a/web/css/task.css
+++ b/web/css/task.css
@@ -46,7 +46,7 @@ body{
     background: none;
     position: relative;
     width: 90%;
-    height: 3em;
+    padding:.5em 0;
     margin-left: 5%;
     border-bottom: 1px solid rgba(160, 160, 160, 0.3);
 }
