--- a/web/css/index2.css
+++ b/web/css/index2.css
@@ -160,7 +160,7 @@ body {
 
 .pane3 {
     width: 100%;
-    height: 8em;
+    height: 9em;
     text-align: left;
     color: #D8D8D8;
     position: relative;
@@ -193,6 +193,8 @@ body {
 }
 
 .pane3-2 {
+    display: flex;
+    flex-direction: column;
     float: left;
     position: relative;
     text-align: center;
