--- a/web/css/orderlist.css
+++ b/web/css/orderlist.css
@@ -79,7 +79,6 @@
     width:20%;
     height:100%;
 }
-
 #NotMoveDIV {
     position: fixed;
     z-index: 999;
@@ -98,11 +97,27 @@
 .icon-box {
     float: left;
     height: 4em;
-    width: 25%;
+    width: 22%;
     margin: 0 auto;
     text-align: center;
     padding-top: 0.6em;
     background: #fff;
+}
+.botm-icon-text {
+    font-family: "Microsoft YaHei";
+    letter-spacing: 0.1em;
+    color: #4f4a46;
+}
+.icon-box2{
+    float: left;
+    height: 100%;
+    width: 12%;
+    margin: 0 auto;
+    text-align: center;
+    background: #fff;
+    justify-content: center;
+    display: flex;
+    align-items: center;
 }
 
 .botm-icon {
@@ -110,8 +125,8 @@
     width: 2em !important;
 }
 
-.botm-icon-text {
-    font-family: "Microsoft YaHei";
-    letter-spacing: 0.1em;
-    color: #4f4a46;
+.botm-icon2 {
+    height: 3em !important;
+    width: 3em !important;
 }
+
