--- a/web/css/order.css
+++ b/web/css/order.css
@@ -41,10 +41,13 @@ body{
 }
 
  .message{
+     display:flex;
      background: none;
      position: relative;
-     width:100%;
-     height: 3em;
+     width: 90%;
+     padding:.5em 0;
+     margin-left: 5%;
+     border-bottom: 1px solid rgba(160, 160, 160, 0.3);
  }
  .lastborder{
      width: 92%;
@@ -53,13 +56,7 @@ body{
      height: 100%;
 
  }
-.border{
-    border-bottom: 1px solid rgba(160, 160, 160, 0.3);
-    width: 92%;
-    margin: 0% 4%;
-    overflow: auto;
-    height: 100%;
-}
+
 .message input{
     border: none;
     color: #646464;
@@ -81,9 +78,10 @@ body{
 }
 
 .message .ctnt{
-    float: left;
+    display: flex;
+    align-items: center;
     width: 70%;
-    padding-top: 1em;
+    margin-top: 0.9%;
 }
 
 select{
@@ -134,6 +132,8 @@ select{
     align-items: center;
     border: none;
     padding: .25em 0;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 .teachers .border+.border{
     border-top: 1px solid rgba(160, 160, 160, 0.3);
@@ -141,6 +141,7 @@ select{
 .teacher .wrap{
     display: flex;
     align-items: center;
+    flex-direction: row;
 }
 .teacher .wrap .avaster{
     background: #000;
@@ -148,11 +149,29 @@ select{
     width: 3.5em;
     height: 3.5em;
     margin-right:1em;
+    display: flex;
+    flex: 0 0 auto;
 }
 .teacher .wrap .intro span+span{
     margin-left: .5em;
 }
 
+
+.intro{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.name{
+    display: flex;
+    flex: 0 0 auto;
+}
+
+.button{
+    display: flex;
+    flex: 0 0 auto;
+}
 
 
 
