--- a/web/css/order.css
+++ b/web/css/order.css
@@ -44,11 +44,10 @@ body{
      background: none;
      position: relative;
      width:100%;
-     height: 3em;
  }
  .lastborder{
      width: 92%;
-     margin: 0% 4%;
+     padding: .7em 4%;
      overflow: auto;
      height: 100%;
 
@@ -56,8 +55,9 @@ body{
 .border{
     border-bottom: 1px solid rgba(160, 160, 160, 0.3);
     width: 92%;
-    margin: 0% 4%;
-    overflow: auto;
+    padding: .7em 4%;
+    overflow: hidden;
+    clear:both;
     height: 100%;
 }
 .message input{
@@ -75,7 +75,6 @@ body{
 }
 
 .message .name{
-    padding-top: 1em;
     float:left;
     width:30%;
 }
@@ -83,7 +82,6 @@ body{
 .message .ctnt{
     float: left;
     width: 70%;
-    padding-top: 1em;
 }
 
 select{
@@ -130,7 +128,7 @@ select{
 }
 .teachers .border{
     display: flex;
-    justify-content: space-between;
+
     align-items: center;
     border: none;
     padding: .25em 0;
@@ -139,18 +137,29 @@ select{
     border-top: 1px solid rgba(160, 160, 160, 0.3);
 }
 .teacher .wrap{
+    padding-left: 4%;
+    width: 100%;
     display: flex;
     align-items: center;
 }
-.teacher .wrap .avaster{
+.teacher .wrap .avatar{
     background: #000;
     border-radius: 50%;
     width: 3.5em;
     height: 3.5em;
     margin-right:1em;
 }
+.teacher .wrap .intro {
+    width: 70%;
+}
+.teacher .wrap .intro span{
+    word-wrap: break-word;
+}
 .teacher .wrap .intro span+span{
     margin-left: .5em;
+}
+.teacher .button{
+    width: 40px;
 }
 
 
