--- a/web/css/orderlist.css
+++ b/web/css/orderlist.css
@@ -1,3 +1,4 @@
+
 .scTop{
     width: 100%;
     padding:8% 0 6% 0%;
@@ -129,4 +130,7 @@
     height: 3em !important;
     width: 3em !important;
 }
+
+.ng-cloak{display:none;}
+
 
