--- a/web/css/task.css
+++ b/web/css/task.css
@@ -1,6 +1,9 @@
 body{
     background-color: #E0E0E0 !important;
 }
+
+.ng-cloak{display:none;}
+
 .scTop{
     width: 100%;
     padding:8% 0 6% 0%;
