--- a/web/css/order.css
+++ b/web/css/order.css
@@ -33,31 +33,31 @@ body{
     overflow: auto;
 }
 
-.order{
+ .order{
     width: 100%;
     height: 35.21%;
     background-color: #fafafa;
-    margin-top: 2em;
+     margin-top: 2em;
 }
 
-.message{
-    background: none;
-    position: relative;
-    width:100%;
-}
-.lastborder{
-    width: 92%;
-    padding: .7em 4%;
-    overflow: auto;
-    height: 100%;
+ .message{
+     background: none;
+     position: relative;
+     width:100%;
+     height: 3em;
+ }
+ .lastborder{
+     width: 92%;
+     margin: 0% 4%;
+     overflow: auto;
+     height: 100%;
 
-}
+ }
 .border{
     border-bottom: 1px solid rgba(160, 160, 160, 0.3);
     width: 92%;
-    padding: .7em 4%;
-    overflow: hidden;
-    clear:both;
+    margin: 0% 4%;
+    overflow: auto;
     height: 100%;
 }
 .message input{
@@ -75,6 +75,7 @@ body{
 }
 
 .message .name{
+    padding-top: 1em;
     float:left;
     width:30%;
 }
@@ -82,6 +83,7 @@ body{
 .message .ctnt{
     float: left;
     width: 70%;
+    padding-top: 1em;
 }
 
 select{
@@ -107,6 +109,41 @@ select{
     border-radius: 3px;
     text-align: center;
 }
+#NotMoveDIV {
+    position: fixed;
+    z-index: 999;
+    left: 0em;
+    bottom: 0;
+    width: 100%;
+    line-height: 1.2em;
+    height: 4.5em;
+    background: #fff;
+    border-width: 0.1em 0 0 0;
+    border-style: solid;
+    border-color: rgba(144, 144, 144, 0.25);
+    font-size: 0.4em;
+}
+
+.icon-box {
+    float: left;
+    height: 4em;
+    width: 25%;
+    margin: 0 auto;
+    text-align: center;
+    padding-top: 0.6em;
+    background: #fff;
+}
+
+.botm-icon {
+    height: 2em !important;
+    width: 2em !important;
+}
+
+.botm-icon-text {
+    font-family: "Microsoft YaHei";
+    letter-spacing: 0.1em;
+    color: #4f4a46;
+}
 
 .shortcut1{
     position: fixed;
@@ -115,48 +152,8 @@ select{
 }
 .content{
     margin-top: 16%;
+    z-index: -1111111;
     position: relative;
 }
 
-.teachers{
 
-    height: auto;
-}
-.teachers .title{
-    margin: 4% 4%;
-}
-.teachers .border{
-    display: flex;
-
-    align-items: center;
-    border: none;
-    padding: .25em 0;
-}
-.teachers .border+.border{
-    border-top: 1px solid rgba(160, 160, 160, 0.3);
-}
-.teacher .wrap{
-    padding-left: 4%;
-    width: 100%;
-    display: flex;
-    align-items: center;
-}
-.teacher .wrap .avatar{
-    background: #000;
-    border-radius: 50%;
-    width: 3.5em;
-    height: 3.5em;
-    margin-right:1em;
-}
-.teacher .wrap .intro {
-    width: 70%;
-}
-.teacher .wrap .intro span{
-    word-wrap: break-word;
-}
-.teacher .wrap .intro span+span{
-    margin-left: .5em;
-}
-.teacher .button{
-    width: 40px;
-}
