--- a/web/css/index2.css
+++ b/web/css/index2.css
@@ -69,12 +69,9 @@ body {
     float: left;
     height: 100%;
     width: 12%;
-    margin: 0 auto;
+    margin: .5em auto 0;
     text-align: center;
     background: #fff;
-    justify-content: center;
-    display: flex;
-    align-items: center;
 }
 
 .botm-icon {
@@ -110,9 +107,6 @@ body {
     border-color: #E8E8E8;
 }
 
-.title{
-    width: 4em;
-}
 
 .title2 {
     font-family: "Microsoft YaHei";
@@ -133,14 +127,14 @@ body {
 }
 
 .groupPane{
+    margin: 0 auto;
     display: flex;
-    justify-content: space-evenly;
     margin-top: 1em;
 }
 
 .smallpane {
-    display: flex;
-    flex-direction: column;
+    width: 5em;
+    text-align: center;
 }
 
 .circle {
